// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waterfall_helpers getWaterfallItems should handle cyclic references 1`] = `
Array [
  Object {
    "doc": Object {
      "timestamp.us": Array [
        10,
      ],
      "transaction.id": Array [
        "a",
      ],
    },
    "docType": "transaction",
    "id": "a",
    "offset": 0,
    "parent": undefined,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "parent.id": Array [
        "a",
      ],
      "span.id": Array [
        "b",
      ],
      "timestamp.us": Array [
        20,
      ],
    },
    "docType": "span",
    "id": "b",
    "offset": 10,
    "parent": Object {
      "doc": Object {
        "timestamp.us": Array [
          10,
        ],
        "transaction.id": Array [
          "a",
        ],
      },
      "docType": "transaction",
      "id": "a",
      "offset": 0,
      "parent": undefined,
      "skew": 0,
    },
    "parentId": "a",
    "skew": 0,
  },
]
`;

exports[`waterfall_helpers getWaterfallItems should order items correctly 1`] = `
Array [
  Object {
    "color": "",
    "doc": Object {
      "service.name": Array [
        "opbeans-java",
      ],
      "timestamp.us": Array [
        1536763736366000,
      ],
      "transaction.id": Array [
        "a",
      ],
      "transaction.name": Array [
        "APIRestController#products",
      ],
    },
    "docType": "transaction",
    "duration": 9480,
    "id": "a",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 0,
    "parent": undefined,
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "parent.id": Array [
        "a",
      ],
      "service.name": Array [
        "opbeans-java",
      ],
      "span.id": Array [
        "b2",
      ],
      "span.name": Array [
        "GET [0:0:0:0:0:0:0:1]",
      ],
      "timestamp.us": Array [
        1536763736367000,
      ],
      "transaction.id": Array [
        "a",
      ],
    },
    "docType": "span",
    "duration": 4694,
    "id": "b2",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 1000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "service.name": Array [
          "opbeans-java",
        ],
        "timestamp.us": Array [
          1536763736366000,
        ],
        "transaction.id": Array [
          "a",
        ],
        "transaction.name": Array [
          "APIRestController#products",
        ],
      },
      "docType": "transaction",
      "duration": 9480,
      "id": "a",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 0,
      "parent": undefined,
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "a",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "parent.id": Array [
        "a",
      ],
      "service.name": Array [
        "opbeans-java",
      ],
      "span.id": Array [
        "b",
      ],
      "span.name": Array [
        "GET [0:0:0:0:0:0:0:1]",
      ],
      "timestamp.us": Array [
        1536763736368000,
      ],
      "transaction.id": Array [
        "a",
      ],
    },
    "docType": "span",
    "duration": 4694,
    "id": "b",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 2000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "service.name": Array [
          "opbeans-java",
        ],
        "timestamp.us": Array [
          1536763736366000,
        ],
        "transaction.id": Array [
          "a",
        ],
        "transaction.name": Array [
          "APIRestController#products",
        ],
      },
      "docType": "transaction",
      "duration": 9480,
      "id": "a",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 0,
      "parent": undefined,
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "a",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "parent.id": Array [
        "b",
      ],
      "service.name": Array [
        "opbeans-java",
      ],
      "timestamp.us": Array [
        1536763736369000,
      ],
      "transaction.id": Array [
        "c",
      ],
      "transaction.name": Array [
        "APIRestController#productsRemote",
      ],
    },
    "docType": "transaction",
    "duration": 3581,
    "id": "c",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 3000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "parent.id": Array [
          "a",
        ],
        "service.name": Array [
          "opbeans-java",
        ],
        "span.id": Array [
          "b",
        ],
        "span.name": Array [
          "GET [0:0:0:0:0:0:0:1]",
        ],
        "timestamp.us": Array [
          1536763736368000,
        ],
        "transaction.id": Array [
          "a",
        ],
      },
      "docType": "span",
      "duration": 4694,
      "id": "b",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 2000,
      "parent": Object {
        "color": "",
        "doc": Object {
          "service.name": Array [
            "opbeans-java",
          ],
          "timestamp.us": Array [
            1536763736366000,
          ],
          "transaction.id": Array [
            "a",
          ],
          "transaction.name": Array [
            "APIRestController#products",
          ],
        },
        "docType": "transaction",
        "duration": 9480,
        "id": "a",
        "legendValues": Object {
          "serviceName": "opbeans-java",
          "spanType": "",
        },
        "offset": 0,
        "parent": undefined,
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "a",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "b",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "parent.id": Array [
        "c",
      ],
      "service.name": Array [
        "opbeans-java",
      ],
      "span.id": Array [
        "d",
      ],
      "span.name": Array [
        "SELECT",
      ],
      "timestamp.us": Array [
        1536763736371000,
      ],
      "transaction.id": Array [
        "c",
      ],
    },
    "docType": "span",
    "duration": 210,
    "id": "d",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 5000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "parent.id": Array [
          "b",
        ],
        "service.name": Array [
          "opbeans-java",
        ],
        "timestamp.us": Array [
          1536763736369000,
        ],
        "transaction.id": Array [
          "c",
        ],
        "transaction.name": Array [
          "APIRestController#productsRemote",
        ],
      },
      "docType": "transaction",
      "duration": 3581,
      "id": "c",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 3000,
      "parent": Object {
        "color": "",
        "doc": Object {
          "parent.id": Array [
            "a",
          ],
          "service.name": Array [
            "opbeans-java",
          ],
          "span.id": Array [
            "b",
          ],
          "span.name": Array [
            "GET [0:0:0:0:0:0:0:1]",
          ],
          "timestamp.us": Array [
            1536763736368000,
          ],
          "transaction.id": Array [
            "a",
          ],
        },
        "docType": "span",
        "duration": 4694,
        "id": "b",
        "legendValues": Object {
          "serviceName": "opbeans-java",
          "spanType": "",
        },
        "offset": 2000,
        "parent": Object {
          "color": "",
          "doc": Object {
            "service.name": Array [
              "opbeans-java",
            ],
            "timestamp.us": Array [
              1536763736366000,
            ],
            "transaction.id": Array [
              "a",
            ],
            "transaction.name": Array [
              "APIRestController#products",
            ],
          },
          "docType": "transaction",
          "duration": 9480,
          "id": "a",
          "legendValues": Object {
            "serviceName": "opbeans-java",
            "spanType": "",
          },
          "offset": 0,
          "parent": undefined,
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "a",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "b",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "c",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
]
`;
